fix: overflow

--- a/css/business_card.css
+++ b/css/business_card.css
@@ -9,7 +9,8 @@ body {
     color: var(--blue-100);
     font-size: 16px;
     height: 100%;
-    overflow-y: hidden;
+    width: 100%;
+    overflow: hidden;
 }
 
 /* ---------- Ball Animation ---------- */
